# account-monitor

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  accounts.example.yaml  docker-compose.yaml
.gitea/workflows/: docker.yaml
.github/workflows/: build-docker.yaml  docker.yaml
scripts/: load_accounts_from_rotki.sh  load_accounts_from_yaml.sh  update_rotki_db.sh
src/: chain.rs  interesting_transaction.rs  lib.rs  main.rs  middleware_custom_block_receipts.rs  notification.rs  token.rs
