[package]
name = "account-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
eyre = "0.6"
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = "0.12.3"
warp = "0.3.7"
serde_derive = "1.0.197"
auto_impl = "1.2.0"
async-trait = "0.1.79"
thiserror = "1.0.58"
ethers-providers = "2.0.14"
serde_yaml = "0.9.34"

[[bin]]
name = "account-monitor"
path = "src/main.rs"


[profile.release]
debug = true

[profile.release.package."*"]
debug = false

